feat: Agregar separador de miles para los campos Currency

--- a/app/views/madmin/fields/currency_field/_form.html.erb
+++ b/app/views/madmin/fields/currency_field/_form.html.erb
@@ -1,1 +1,11 @@
-<%= form.text_field field.attribute_name, class: "form-input" %>
+<%= form.text_field field.attribute_name,
+                class: "form-input",
+                value:
+                  number_to_currency(
+                    record.send(field.attribute_name),
+                    unit: "",
+                    precision: 10,
+                  ).strip,
+                data: {
+                  controller: "number-input",
+                } %>
