--- a/app/views/madmin/application/_javascript.html.erb
+++ b/app/views/madmin/application/_javascript.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_importmap_tags %>
+<%= javascript_importmap_tags "application" %>
 
 <%= stylesheet_link_tag *Madmin.stylesheets, "data-turbo-track": "reload" %>
 <%= stylesheet_link_tag "https://unpkg.com/flatpickr/dist/flatpickr.min.css",
