--- a/app/views/layouts/madmin/application.html.erb
+++ b/app/views/layouts/madmin/application.html.erb
@@ -12,6 +12,7 @@
     </title>
     <%= csrf_meta_tags %>
     <%= render "javascript" %>
+    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
   </head>
   <body class="<%= controller_name %> <%= action_name %>" data-controller="mobile-nav">
     <header>
