--- a/app/views/madmin/fields/currency_field/_form.html.erb
+++ b/app/views/madmin/fields/currency_field/_form.html.erb
@@ -1,11 +1,15 @@
+<% extra_data ||= {} %>
+<% extra_data[:transaction_form_target] = "costRate" if field.attribute_name ==
+  :cost_rate %>
+<% extra_data[:transaction_form_target] = "rate" if field.attribute_name == :rate %>
+<% extra_data[:action] = "transaction-form#calculate" if extra_data[
+  :transaction_form_target
+].present? %>
+
 <%= form.text_field field.attribute_name,
                 class: "form-input",
-                value:
-                  number_to_currency(
-                    record.send(field.attribute_name),
-                    unit: "",
-                    precision: 10,
-                  ).strip,
+                value: money_value(record.send(field.attribute_name)),
                 data: {
                   controller: "number-input",
+                  **extra_data,
                 } %>
