--- a/app/views/madmin/fields/currency_field/_index.html.erb
+++ b/app/views/madmin/fields/currency_field/_index.html.erb
@@ -1,8 +1,9 @@
-<p>
+<% color = record.profit_margin.positive? ? :green : :red %>
+<% sign = record.profit_margin.positive? ? "+" : "-" %>
+<%= tag.p style: field.attribute_name == :profit ? "color: #{color};" : "" do %>
+  <%= sign if field.attribute_name == :profit %>
   <%= field.value(record) %>
   <% if record.respond_to?(:display_profit_margin) && field.attribute_name == :profit %>
-    <sub
-      style="vertical-align: top; color: <%= record.profit_margin.positive? ? :green : :red %>"
-    ><%= record.display_profit_margin %></sub>
+    <sub style="vertical-align: top;"><%= record.display_profit_margin %></sub>
   <% end %>
-</p>
+<% end %>
