--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -7,17 +7,9 @@
 <% end %>
 
 <%= content_for :page_actions do %>
-  <%= form_with(url: [:transactions], method: :get, html: {class: "search-form"}) do |f| %>
-    <%= f.search_field :q,
-                   class: "mb-0",
-                   value: params[:q],
-                   placeholder: t(".search", default: t("search")) %>
-  <% end %>
+  <%= render "shared/search_input", url: transactions_path %>
 
-  <%= link_to [:new, :transaction], role: :button do %>
-    <%= icon("plus") %>
-
-    <span><%= t("new") %></span>
-  <% end %>
+  <%= icon_link t("new"), %i[new transaction], icon: "plus", role: :button %>
 <% end %>
+
 <%= render "list", transactions: @collection %>
