--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,4 +1,5 @@
 <tr>
+  <td>#<%= transaction.id %></td>
   <td><%= transaction.display_rate %></td>
   <td><%= transaction.display_cost_rate %></td>
   <td><%= transaction.display_amount %></td>
