--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -7,7 +7,17 @@
 <% end %>
 
 <%= content_for :page_actions do %>
-  <%= render "shared/search_input", url: transactions_path %>
+  <%= form_with(url: [:transactions], method: :get, html: {class: "search-form", data: {controller: "auto-submit"}}) do |f| %>
+    <%= f.date_field :by_created_at,
+                 value: params[:by_created_at],
+                 data: {
+                   action: "auto-submit#submit",
+                 } %>
+    <%= f.search_field :q,
+                   class: "mb-0",
+                   value: params[:q],
+                   placeholder: t(".search", default: t("search")) %>
+  <% end %>
 
   <%= icon_link t("new"), %i[new transaction], icon: "plus", role: :button %>
 <% end %>
