feat: Implementar selector de Dias con flatpickr

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,7 @@
 @import url("summary.css");
 @import url("sidebar.css");
 @import url("metrics.css");
+@import url("flatpickr.min.css");
 
 [role="button"] {
     display: flex;
